# cf-sound-localization

./: README.md
conn_time_sync/: CMakeLists.txt  prj.conf
conn_time_sync/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
conn_time_sync/include/: conn_time_sync.h
conn_time_sync/src/: buttons_leds.c  central.c  main.c  peripheral.c  timed_i2s.c
scripts/: linear_mic0.txt  linear_mic1.txt  linear_mic2.txt  locate.ipynb  requirements.txt  small_mic0.txt  small_mic1.txt
